--- a/index.html
+++ b/index.html
@@ -3,7 +3,31 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Needify - On-Demand Local Professionals</title>
+    <title>Needify – Book Trusted Local Professionals Fast</title>
+
+    <meta
+      name="description"
+      content="Needify helps you find and book trusted local professionals — plumbers, electricians, HVAC technicians, car repair experts, and more — in minutes."
+    />
+    <meta
+      name="keywords"
+      content="Needify, Needify app, local services, plumbers, electricians, HVAC, car repairs, home services"
+    />
+    <meta name="author" content="Needify Inc." />
+
+    <link rel="canonical" href="https://needify.app/" />
+
+    <meta
+      property="og:title"
+      content="Needify – Book Trusted Local Professionals Fast"
+    />
+    <meta
+      property="og:description"
+      content="Find and book trusted local plumbers, electricians, and repair experts with Needify."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://needify.app/" />
+    <meta property="og:image" content="https://needify.app/favicon.png" />
     <link rel="icon" href="/favicon.png" />
 
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
@@ -18,6 +42,20 @@
       rel="stylesheet"
     />
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Needify",
+        "url": "https://needify.app",
+        "logo": "https://needify.app/favicon.png",
+        "description": "Needify connects people with trusted local professionals for home services and repairs.",
+        "sameAs": [
+          "https://x.com/Needify_io",
+          "https://www.instagram.com/needify.io"
+        ]
+      }
+    </script>
     <script id="tailwind-config">
       tailwind.config = {
         darkMode: "class",
@@ -159,13 +197,15 @@
                 <h1
                   class="text-white text-5xl md:text-6xl lg:text-7xl font-black leading-[1.1] tracking-tight"
                 >
-                  Expert Help for <br />
+                  Needify — Expert Help for <br />
                   Every
                   <span
                     class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-teal-400"
-                    >Project</span
+                  >
+                    Project </span
                   >.
                 </h1>
+
                 <p
                   class="text-slate-400 text-lg md:text-xl font-normal leading-relaxed max-w-[600px] mx-auto lg:mx-0"
                 >
