feat: add estate maintenance, movers, and see-more service cards

--- a/index.html
+++ b/index.html
@@ -369,6 +369,45 @@
               professional for your specific needs.
             </p>
           </div>
+
+          <div
+            class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
+          >
+            <div
+              class="w-12 h-12 rounded-xl bg-purple-500/20 flex items-center justify-center text-purple-400 group-hover:scale-110 transition-transform"
+            >
+              <span class="material-symbols-outlined text-[28px]"
+                >real_estate_agent</span
+              >
+            </div>
+            <div class="flex flex-col gap-2">
+              <h3 class="text-white text-lg font-bold">Estate Maintenance</h3>
+              <p class="text-slate-400 text-sm leading-relaxed">
+                Full-scale property management and upkeep to preserve your
+                estate's value and beauty.
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
+          >
+            <div
+              class="w-12 h-12 rounded-xl bg-orange-500/20 flex items-center justify-center text-orange-400 group-hover:scale-110 transition-transform"
+            >
+              <span class="material-symbols-outlined text-[28px]"
+                >local_shipping</span
+              >
+            </div>
+            <div class="flex flex-col gap-2">
+              <h3 class="text-white text-lg font-bold">Professional Movers</h3>
+              <p class="text-slate-400 text-sm leading-relaxed">
+                Stress-free relocation services designed to move you comfortably
+                to your new destination.
+              </p>
+            </div>
+          </div>
+
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
             <div
               class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
@@ -451,6 +490,24 @@
                 <p class="text-slate-400 text-sm leading-relaxed">
                   Car checkes, fixes and maintainance.
                 </p>
+              </div>
+              <div
+                class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl border border-dashed border-white/20 hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group cursor-pointer"
+              >
+                <div
+                  class="w-12 h-12 rounded-xl bg-slate-500/20 flex items-center justify-center text-slate-300 group-hover:scale-110 transition-transform"
+                >
+                  <span class="material-symbols-outlined text-[28px]"
+                    >more_horiz</span
+                  >
+                </div>
+                <div class="flex flex-col gap-2">
+                  <h3 class="text-white text-lg font-bold">And Much More</h3>
+                  <p class="text-slate-400 text-sm leading-relaxed">
+                    Explore our full range of specialized services tailored to
+                    your specific home and business needs.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
