--- a/index.html
+++ b/index.html
@@ -369,150 +369,211 @@
               professional for your specific needs.
             </p>
           </div>
+<!-- SERVICES GRID WRAPPER -->
+<!-- This grid controls ALL service cards -->
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
 
-          <div
-            class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
-          >
-            <div
-              class="w-12 h-12 rounded-xl bg-purple-500/20 flex items-center justify-center text-purple-400 group-hover:scale-110 transition-transform"
-            >
-              <span class="material-symbols-outlined text-[28px]"
-                >real_estate_agent</span
-              >
-            </div>
-            <div class="flex flex-col gap-2">
-              <h3 class="text-white text-lg font-bold">Estate Maintenance</h3>
-              <p class="text-slate-400 text-sm leading-relaxed">
-                Full-scale property management and upkeep to preserve your
-                estate's value and beauty.
-              </p>
-            </div>
-          </div>
+  <!-- ESTATE MAINTENANCE CARD -->
+  <div
+    class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl
+           hover:bg-white/5 hover:translate-y-[-4px]
+           transition-all duration-300 group"
+  >
+    <!-- Icon -->
+    <div
+      class="w-12 h-12 rounded-xl bg-purple-500/20
+             flex items-center justify-center text-purple-400
+             group-hover:scale-110 transition-transform"
+    >
+      <span class="material-symbols-outlined text-[28px]">
+        real_estate_agent
+      </span>
+    </div>
 
-          <div
-            class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
-          >
-            <div
-              class="w-12 h-12 rounded-xl bg-orange-500/20 flex items-center justify-center text-orange-400 group-hover:scale-110 transition-transform"
-            >
-              <span class="material-symbols-outlined text-[28px]"
-                >local_shipping</span
-              >
-            </div>
-            <div class="flex flex-col gap-2">
-              <h3 class="text-white text-lg font-bold">Professional Movers</h3>
-              <p class="text-slate-400 text-sm leading-relaxed">
-                Stress-free relocation services designed to move you comfortably
-                to your new destination.
-              </p>
-            </div>
-          </div>
+    <!-- Text -->
+    <div class="flex flex-col gap-2">
+      <h3 class="text-white text-lg font-bold">Estate Maintenance</h3>
+      <p class="text-slate-400 text-sm leading-relaxed">
+        Full-scale property management and upkeep to preserve your estate's
+        value and beauty.
+      </p>
+    </div>
+  </div>
 
-          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div
-              class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
-            >
-              <div
-                class="w-12 h-12 rounded-xl bg-blue-500/20 flex items-center justify-center text-blue-400 group-hover:scale-110 transition-transform"
-              >
-                <span class="material-symbols-outlined text-[28px]"
-                  >plumbing</span
-                >
-              </div>
-              <div class="flex flex-col gap-2">
-                <h3 class="text-white text-lg font-bold">Plumbing</h3>
-                <p class="text-slate-400 text-sm leading-relaxed">
-                  Leaks, drains, and pipe installations handled by licensed
-                  plumbers.
-                </p>
-              </div>
-            </div>
-            <div
-              class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
-            >
-              <div
-                class="w-12 h-12 rounded-xl bg-yellow-500/20 flex items-center justify-center text-yellow-400 group-hover:scale-110 transition-transform"
-              >
-                <span class="material-symbols-outlined text-[28px]"
-                  >electrical_services</span
-                >
-              </div>
-              <div class="flex flex-col gap-2">
-                <h3 class="text-white text-lg font-bold">Electrical</h3>
-                <p class="text-slate-400 text-sm leading-relaxed">
-                  Safety inspections, wiring, and repairs by certified
-                  electricians.
-                </p>
-              </div>
-            </div>
-            <div
-              class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
-            >
-              <div
-                class="w-12 h-12 rounded-xl bg-purple-500/20 flex items-center justify-center text-purple-400 group-hover:scale-110 transition-transform"
-              >
-                <span class="material-symbols-outlined text-[28px]">build</span>
-              </div>
-              <div class="flex flex-col gap-2">
-                <h3 class="text-white text-lg font-bold">General Repair</h3>
-                <p class="text-slate-400 text-sm leading-relaxed">
-                  Furniture assembly, mounting, and general home repairs.
-                </p>
-              </div>
-            </div>
-            <div
-              class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
-            >
-              <div
-                class="w-12 h-12 rounded-xl bg-teal-500/20 flex items-center justify-center text-teal-400 group-hover:scale-110 transition-transform"
-              >
-                <span class="material-symbols-outlined text-[28px]">hvac</span>
-              </div>
-              <div class="flex flex-col gap-2">
-                <h3 class="text-white text-lg font-bold">HVAC</h3>
-                <p class="text-slate-400 text-sm leading-relaxed">
-                  Heating, ventilation, and air conditioning maintenance.
-                </p>
-              </div>
-            </div>
-            <div
-              class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group"
-            >
-              <div
-                class="w-12 h-12 rounded-xl bg-teal-500/20 flex items-center justify-center text-teal-400 group-hover:scale-110 transition-transform"
-              >
-                <span class="material-symbols-outlined text-[28px]"
-                  >car_repair</span
-                >
-              </div>
-              <div class="flex flex-col gap-2">
-                <h3 class="text-white text-lg font-bold">Car repairs</h3>
-                <p class="text-slate-400 text-sm leading-relaxed">
-                  Car checkes, fixes and maintainance.
-                </p>
-              </div>
-              <div
-                class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl border border-dashed border-white/20 hover:bg-white/5 hover:translate-y-[-4px] transition-all duration-300 group cursor-pointer"
-              >
-                <div
-                  class="w-12 h-12 rounded-xl bg-slate-500/20 flex items-center justify-center text-slate-300 group-hover:scale-110 transition-transform"
-                >
-                  <span class="material-symbols-outlined text-[28px]"
-                    >more_horiz</span
-                  >
-                </div>
-                <div class="flex flex-col gap-2">
-                  <h3 class="text-white text-lg font-bold">And Much More</h3>
-                  <p class="text-slate-400 text-sm leading-relaxed">
-                    Explore our full range of specialized services tailored to
-                    your specific home and business needs.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+  <!-- PROFESSIONAL MOVERS CARD -->
+  <div
+    class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl
+           hover:bg-white/5 hover:translate-y-[-4px]
+           transition-all duration-300 group"
+  >
+    <div
+      class="w-12 h-12 rounded-xl bg-orange-500/20
+             flex items-center justify-center text-orange-400
+             group-hover:scale-110 transition-transform"
+    >
+      <span class="material-symbols-outlined text-[28px]">
+        local_shipping
+      </span>
+    </div>
+
+    <div class="flex flex-col gap-2">
+      <h3 class="text-white text-lg font-bold">Professional Movers</h3>
+      <p class="text-slate-400 text-sm leading-relaxed">
+        Stress-free relocation services designed to move you comfortably
+        to your new destination.
+      </p>
+    </div>
+  </div>
+
+  <!-- PLUMBING CARD -->
+  <div
+    class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl
+           hover:bg-white/5 hover:translate-y-[-4px]
+           transition-all duration-300 group"
+  >
+    <div
+      class="w-12 h-12 rounded-xl bg-blue-500/20
+             flex items-center justify-center text-blue-400
+             group-hover:scale-110 transition-transform"
+    >
+      <span class="material-symbols-outlined text-[28px]">
+        plumbing
+      </span>
+    </div>
+
+    <div class="flex flex-col gap-2">
+      <h3 class="text-white text-lg font-bold">Plumbing</h3>
+      <p class="text-slate-400 text-sm leading-relaxed">
+        Leaks, drains, and pipe installations handled by licensed plumbers.
+      </p>
+    </div>
+  </div>
+
+  <!-- ELECTRICAL CARD -->
+  <div
+    class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl
+           hover:bg-white/5 hover:translate-y-[-4px]
+           transition-all duration-300 group"
+  >
+    <div
+      class="w-12 h-12 rounded-xl bg-yellow-500/20
+             flex items-center justify-center text-yellow-400
+             group-hover:scale-110 transition-transform"
+    >
+      <span class="material-symbols-outlined text-[28px]">
+        electrical_services
+      </span>
+    </div>
+
+    <div class="flex flex-col gap-2">
+      <h3 class="text-white text-lg font-bold">Electrical</h3>
+      <p class="text-slate-400 text-sm leading-relaxed">
+        Safety inspections, wiring, and repairs by certified electricians.
+      </p>
+    </div>
+  </div>
+
+  <!-- GENERAL REPAIR CARD -->
+  <div
+    class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl
+           hover:bg-white/5 hover:translate-y-[-4px]
+           transition-all duration-300 group"
+  >
+    <div
+      class="w-12 h-12 rounded-xl bg-purple-500/20
+             flex items-center justify-center text-purple-400
+             group-hover:scale-110 transition-transform"
+    >
+      <span class="material-symbols-outlined text-[28px]">
+        build
+      </span>
+    </div>
+
+    <div class="flex flex-col gap-2">
+      <h3 class="text-white text-lg font-bold">General Repair</h3>
+      <p class="text-slate-400 text-sm leading-relaxed">
+        Furniture assembly, mounting, and general home repairs.
+      </p>
+    </div>
+  </div>
+
+  <!-- HVAC CARD -->
+  <div
+    class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl
+           hover:bg-white/5 hover:translate-y-[-4px]
+           transition-all duration-300 group"
+  >
+    <div
+      class="w-12 h-12 rounded-xl bg-teal-500/20
+             flex items-center justify-center text-teal-400
+             group-hover:scale-110 transition-transform"
+    >
+      <span class="material-symbols-outlined text-[28px]">
+        hvac
+      </span>
+    </div>
+
+    <div class="flex flex-col gap-2">
+      <h3 class="text-white text-lg font-bold">HVAC</h3>
+      <p class="text-slate-400 text-sm leading-relaxed">
+        Heating, ventilation, and air conditioning maintenance.
+      </p>
+    </div>
+  </div>
+
+  <!-- CAR REPAIRS CARD -->
+  <div
+    class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl
+           hover:bg-white/5 hover:translate-y-[-4px]
+           transition-all duration-300 group"
+  >
+    <div
+      class="w-12 h-12 rounded-xl bg-teal-500/20
+             flex items-center justify-center text-teal-400
+             group-hover:scale-110 transition-transform"
+    >
+      <span class="material-symbols-outlined text-[28px]">
+        car_repair
+      </span>
+    </div>
+
+    <div class="flex flex-col gap-2">
+      <h3 class="text-white text-lg font-bold">Car Repairs</h3>
+      <p class="text-slate-400 text-sm leading-relaxed">
+        Car checks, fixes, and maintenance.
+      </p>
+    </div>
+  </div>
+
+  <!-- AND MUCH MORE (CTA CARD) -->
+  <!-- This is a sibling, NOT nested -->
+  <div
+    class="glass-card flex flex-col items-start gap-4 p-6 rounded-2xl
+           border border-dashed border-white/20
+           hover:bg-white/5 hover:translate-y-[-4px]
+           transition-all duration-300 group cursor-pointer"
+  >
+    <div
+      class="w-12 h-12 rounded-xl bg-slate-500/20
+             flex items-center justify-center text-slate-300
+             group-hover:scale-110 transition-transform"
+    >
+      <span class="material-symbols-outlined text-[28px]">
+        more_horiz
+      </span>
+    </div>
+
+    <div class="flex flex-col gap-2">
+      <h3 class="text-white text-lg font-bold">And Much More</h3>
+      <p class="text-slate-400 text-sm leading-relaxed">
+        Explore our full range of specialized services tailored to your
+        home and business needs.
+      </p>
+    </div>
+  </div>
+
+</div>
+
     </section>
     <section class="relative z-10 py-20 px-4" id="services">
       <div class="max-w-[1200px] mx-auto flex flex-col gap-12">
