Update X account link

--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
           <div class="flex gap-4">
             <a
               class="text-slate-500 hover:text-primary transition-colors"
-              href="https://x.com/Needify_io"
+              href="https://x.com/needify_"
             >
               <span class="sr-only">Twitter</span>
               <svg
