--- a/index.html
+++ b/index.html
@@ -953,12 +953,12 @@
                 <a
                   class="text-slate-500 hover:text-primary text-sm transition-colors"
                   href="#"
-                  >Plumbing</a
+                  >Estate Maintenance</a
                 >
                 <a
                   class="text-slate-500 hover:text-primary text-sm transition-colors"
                   href="#"
-                  >Electrical</a
+                  >Professional Movers</a
                 >
                 <a
                   class="text-slate-500 hover:text-primary text-sm transition-colors"
